[tool.poetry]
name = "json_schema_checker"
version = "0.1.0"
description = "Check json format"
authors = ["Zorgulle <winy95battle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
